# bluestacksmcp

./: README.md  main.py  mcp_config.py  models.py  prompts.py  pyproject.toml  requirements.txt
bluestacks/: __init__.py  agent.py  config.py  errors.py  types.py
tools/: __init__.py  adb_tools.py  core_tools.py  smart_tools.py
utils/: __init__.py  adb.py
