[project]
name = "bluestacks-mcp"
version = "0.1.0"
description = "MCP server for controlling Android apps on BlueStacks emulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.25.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
bluestacks-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
